--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
 
 dependencies {
 
+    implementation 'androidx.core:core:1.7.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
@@ -48,6 +49,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+
+    implementation 'com.prolificinteractive:material-calendarview:1.4.3'
 
     // glide 추가
     implementation 'com.github.bumptech.glide:glide:4.12.0'
